PR review update #2